# Kozmic

./: .gitignore  CMakeLists.txt  README.md  monkey.dae  test.dae  test.fbx  test2.dae
app/: CMakeLists.txt  main.cpp
include/Core/: Camera.h  Component.h  GameObject.h  InputManager.h  Light.h  Mesh.h  Scene.h  ScriptBase.h  Shader.h  Timer.h  Transform.h  Window.h
include/Core/Base/: GameObject.h  PhysicsManager.h  Renderer.h  Scene.h  Script.h  Shader.h  ShaderManager.h  Window.h
include/Core/Components/: Camera.h  Light.h  Transform.h
include/Core/Renderers/: MeshRenderer.h  RenderUtils.h
resources/models/: lamp.mtl  test2.mtl  testScene.mtl
resources/shaders/fragment/: basic.frag
resources/shaders/vertex/: basic.vert
resources/textures/diffuse/.mayaSwatches/: brick.jpg_hcm.swatch  brick.png_hcm.swatch  diffuseTest.png_hcm.swatch  test2.png_hcm.swatch  woodenFloor.png_hcm.swatch
resources/textures/normal/.mayaSwatches/: brick.png_hcm.swatch
resources/textures/specular/.mayaSwatches/: specularTest.png_hcm.swatch
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  Camera.cpp  GameObject.cpp  Light.cpp  Mesh.cpp  MeshRenderer.cpp  Scene.cpp  ScriptBase.cpp  Shader.cpp  Texture.cpp  Timer.cpp  Transform.cpp  Window.cpp
src/Core/Base/: GameObject.cpp  PhysicsManager.cpp  Scene.cpp  Script.cpp  Shader.cpp  ShaderManager.cpp  Window.cpp  stb_image.cpp
src/Core/Components/: Camera.cpp  Light.cpp  Transform.cpp
src/Core/Renderers/: MeshRenderer.cpp
src/Core/include/: Camera.h  Component.h  GameObject.h  Mesh.h  Texture.h  Transform.h  Window.h
src/dependencies/include/SDL2/: SDL_config.h
tests/: CMakeLists.txt  main.cpp  testScene.h
