set (INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include/Core)
set (SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/Core)

##### SEARCH FILES IN ALL CORE FOLDER AND SUBFOLDERS #####
AUX_SOURCE_DIRECTORY(${SOURCE_DIR} ROOT)
AUX_SOURCE_DIRECTORY(${SOURCE_DIR}/Base BASE)
AUX_SOURCE_DIRECTORY(${SOURCE_DIR}/Components COMPONENTS)
AUX_SOURCE_DIRECTORY(${SOURCE_DIR}/Renderers RENDERERS)

add_library(Core STATIC ${ROOT} ${BASE} ${COMPONENTS} ${RENDERERS})
target_include_directories(Core PUBLIC ${INCLUDE_DIR})

##### DEPENDENCIES CONFIG #####
set(SDL_DEPS SDL2main SDL2 m user32 winmm imm32 ole32 oleaut32 version uuid advapi32 setupapi shell32 dinput8 dxerr8)
set(GLEW_DEPS glew32 glu32 opengl32)
set(ASSIMP_DEPS assimp IrrXML zlibstatic)
set(BULLET_DEPS libBulletDynamics.a libBulletCollision.a libLinearMath.a)

CONFIG_DEPENDENCY(Core SDL2 "${SDL_DEPS}")
CONFIG_DEPENDENCY(Core GLEW "${GLEW_DEPS}")
CONFIG_DEPENDENCY(Core GLM glm)
CONFIG_DEPENDENCY(Core ASSIMP "${ASSIMP_DEPS}")
CONFIG_DEPENDENCY(Core BULLET "${BULLET_DEPS}")